@@ -3,8 +3,10 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "H. H. Li. Refractive index of alkali halides and its wavelength and temperature derivatives. <a href=\"http://dx.doi.org/10.1063/1.555536\"><i>J. Phys. Chem. Ref. Data</i> <b>5</b>, 329-528 (1976)</a> and references therein.<br> <sup>*</sup> Sellmeier formula derivation is based on a single data point and knowledge of the dielectric constants and the characteristic absorption peaks."
-COMMENTS: "297 K (24 °C)."
+COMMENTS: "297 K (23.85 °C)."
 DATA:
   - type: formula 1
     range: 0.25 40
     coefficients: 0.478 1.532 0.170 4.27 86.21
+INFO:
+    temperature: 297 K
